Fix broken style

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,12 +13,6 @@ main {
   max-width: 800px;
 }
 
-@media (max-width: 800px) {
-  main {
-    margin: 2em 2em 0 2em;
-  }
-}
-
 :host ::ng-deep router-outlet+* {
   display: block;
   min-height: calc(100vH - 2em - 56px);
@@ -36,10 +30,20 @@ mk-social-bar {
 }
 
 .gradient {
-  height: 300px;
+  height: calc(142px + 2em);
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   z-index: 1;
+}
+
+@media (max-width: 800px) {
+  main {
+    margin: 0;
+  }
+
+  .gradient {
+    height: 126px;
+  }
 }
